# AgentCpp

./: .env.example  .gitignore  CMakeLists.txt  README.md  smoke_memory.cpp
include/agent/: CoTMonitor.hpp  MetaController.hpp  MetacognitionEngine.hpp  Persona.hpp  PlanGraph.hpp  PlannerEngine.hpp  QueryEngine.hpp  Reflector.hpp  SchemaReviser.hpp  SelfBelief.hpp  SelfModelMemoryAdapter.hpp  SelfModelStore.hpp  SelfProposition.hpp
include/api/: Capabilities.hpp  ClaudeClient.hpp  Types.hpp
include/channels/: ChannelBus.hpp
include/mcp/: JsonRpc.hpp  McpClient.hpp  McpManager.hpp
include/memory/: BM25Index.hpp  EntityResolver.hpp  FactExtractor.hpp  Fusion.hpp  GraphRetrieval.hpp  MemoryEngine.hpp  MemoryProviders.hpp  MemoryStorage.hpp  MemoryTypes.hpp  Reranker.hpp
include/memory/providers/: ClaudeFactExtractor.hpp  ClaudeReflectComposer.hpp  HeuristicFactExtractor.hpp  HeuristicReranker.hpp  HttpEmbedder.hpp  IEmbedder.hpp  IFactExtractor.hpp  IReflectComposer.hpp  IReranker.hpp  NullEmbedder.hpp  TemplateReflectComposer.hpp
include/skills/: Skill.hpp  SkillRegistry.hpp
include/tools/: BashTool.hpp  ChannelTool.hpp  ComputerTool.hpp  DataTool.hpp  DocTool.hpp  FileEditTool.hpp  FileReadTool.hpp  FileWriteTool.hpp  GlobTool.hpp  GrepTool.hpp  McpTool.hpp  MemoryTool.hpp  SkillTool.hpp  TaskTool.hpp  Tool.hpp  WebTool.hpp
include/tui/: App.hpp
include/utils/: Config.hpp  Logger.hpp  StringUtils.hpp
personas/: coder.yaml  data.yaml  general.yaml  office.yaml  researcher.yaml
src/: main.cpp
src/agent/: CoTMonitor.cpp  MetaController.cpp  MetacognitionEngine.cpp  Persona.cpp  PlanGraph.cpp  PlannerEngine.cpp  QueryEngine.cpp  Reflector.cpp  SchemaReviser.cpp  SelfBelief.cpp  SelfModelMemoryAdapter.cpp  SelfModelStore.cpp
src/api/: Capabilities.cpp  ClaudeClient.cpp  Types.cpp
src/channels/: ChannelBus.cpp
src/mcp/: McpClient.cpp  McpManager.cpp
src/memory/: BM25Index.cpp  EntityResolver.cpp  FactExtractor.cpp  Fusion.cpp  GraphRetrieval.cpp  MemoryEngine.cpp  MemoryProviders.cpp  MemoryStorage.cpp  MemoryTypes.cpp  Reranker.cpp
src/memory/providers/: ClaudeFactExtractor.cpp  ClaudeReflectComposer.cpp  HttpEmbedder.cpp  IEmbedder.cpp  TemplateReflectComposer.cpp
src/skills/: SkillRegistry.cpp
src/tools/: BashTool.cpp  ChannelTool.cpp  ComputerTool.cpp  DataTool.cpp  DocTool.cpp  FileEditTool.cpp  FileReadTool.cpp  FileWriteTool.cpp  GlobTool.cpp  GrepTool.cpp  McpTool.cpp  MemoryTool.cpp  SkillTool.cpp  TaskTool.cpp  Tool.cpp  WebTool.cpp
src/tui/: App.cpp
src/utils/: Config.cpp  Logger.cpp  StringUtils.cpp
